# gottagofast

./: .gitignore  README.md  compose.yaml  docker-compose.yaml  wrk.lua
db/migrations/: 20230910200559_init.sql  20230910203308_add-fortunes.sql
fortunes-ex/: .gitignore  README.md  mix.exs
fortunes-ex/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
fortunes-ex/lib/: fortunes.ex  fortunes_web.ex
fortunes-ex/lib/fortunes/: application.ex  fortune.ex  repo.ex
fortunes-ex/lib/fortunes_web/: endpoint.ex  router.ex  telemetry.ex
fortunes-ex/lib/fortunes_web/controllers/: error_json.ex  fortune_controller.ex
fortunes-ex/priv/repo/: seeds.exs
fortunes-ex/test/: test_helper.exs
fortunes-ex/test/fortunes_web/controllers/: error_json_test.exs
fortunes-ex/test/support/: conn_case.ex  data_case.ex
fortunes-py/: pyproject.toml
fortunes-py-sqlalchemy/: pyproject.toml
fortunes-py-sqlalchemy/src/fortunes_py/: __init__.py  orm.py
fortunes-py-sqlmodel/: .tool-versions  pyproject.toml
fortunes-py-sqlmodel/fortunes_py/: __init__.py
fortunes-py-sqlmodel/src/fortunes_py/: __init__.py
fortunes-py/fortunes_py/: __init__.py
fortunes-rs/: Cargo.toml
fortunes-rs-postgres/: Cargo.toml
fortunes-rs-postgres/src/: main.rs
fortunes-rs-sqlx/: Cargo.toml
fortunes-rs-sqlx/src/: main.rs
fortunes-rs/src/: main.rs
