[project]
name = "fortunes-py-sqlalchemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Smith", email = "david@narigama.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "pydantic>=2.10.4",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.34.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
force-single-line = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fortunes_py"]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "ruff>=0.8.4",
]
