[project]
name = "fortunes-py-sqlalchemy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "David Smith", email = "david@narigama.dev" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncpg",
    "fastapi",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "uvicorn",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint.isort]
force-single-line = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fortunes_py"]

[dependency-groups]
dev = [
    "ipython",
    "ruff",
]
