[tool.poetry]
name        = "fortunes-py"
version     = "0.1.0"
description = ""
authors     = ["David Smith <david@narigama.dev>"]
readme      = "README.md"

[tool.poetry.dependencies]
python            = "^3.11"
fastapi           = { version = "*" }
asyncpg           = { version = "*" }
uvicorn           = { version = "*" }
pydantic-settings = { version = "*" }
sqlmodel          = { version = "^0.0.18", extras = ["postgres"] }
gunicorn = "*"

[tool.poetry.group.dev.dependencies]
ipython = "*"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
