[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "fortunes-py"
version         = "0.1.0"
description     = "Add your description here"
readme          = "README.md"
requires-python = ">=3.12"
authors         = [
    { name = "David Smith", email = "david@narigama.dev" }
]
dependencies    = [
    "fastapi",
    "asyncpg",
    "uvicorn",
    "pydantic-settings",
]

[dependency-groups]
dev = [
    "ipython>=8.31.0",
    "ruff>=0.9.2",
]