[package]
name    = "fortunes-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap    = { version = "4.4.2", features = ["env", "derive"] }
dotenvy = { version = "0.15.7" }

# web
axum  = { version = "0.6.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }

# logging
tracing            = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing-error      = "0.2.0"

# error handling
thiserror  = { version = "1.0.48" }
color-eyre = { version = "0.6.2" }

# database
deadpool-postgres = { version = "0.13.0" }
tokio-postgres    = { version = "0.7.10" }
