[package]
name    = "fortunes-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum               = { version = "0.6.20", features = ["json"] }
axum-sqlx-tx       = { version = "0.5.0", features = ["runtime-tokio-rustls", "postgres"] }
clap               = { version = "4.4.2", features = ["env", "derive"] }
dotenvy            = { version = "0.15.7" }
serde              = { version = "1.0.188", features = ["derive"] }
sqlx               = { version = "0.7.1", features = ["runtime-tokio-rustls", "json", "postgres"] }
tokio              = { version = "1.32.0", features = ["full"] }
tracing            = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17" }
