[package]
name    = "fortunes-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum               = { version = "0.6.20", features = ["json"] }
clap               = { version = "4.4.2", features = ["env", "derive"] }
deadpool-postgres  = { version = "0.10.5" }
dotenvy            = { version = "0.15.7" }
serde              = { version = "1.0.188", features = ["derive"] }
tokio              = { version = "1.32.0", features = ["full"] }
tokio-postgres     = { version = "0.7.10" }
tracing            = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17" }
url                = { version = "2.4.1" }

# sqlx               = { version = "0.7.1", features = ["runtime-tokio", "postgres"] }
