[package]
name    = "fortunes-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap    = { version = "4.4.2", features = ["env", "derive"] }
dotenvy = { version = "0.15.7" }

# web
axum  = { version = "0.6.20", features = ["json"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }

# logging
tracing            = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17" }

# database
url               = { version = "2.4.1" }
tokio-postgres    = { version = "0.7.10" }
deadpool-postgres = { version = "0.10.5" }
